# goldeneye-level-editor

./: .gitignore  README.md  dev-server.py  index.html  package.json
created-levels/: level_1.glb  test_lights.lights.json
docs/: csg-optimization-plan.md  rust-wasm-csg-design.md
public/: textureSchemes.json
spike/: analyze_colors.py  analyze_patterns.py  analyze_v2.py  analyze_v3.py  final_summary.py
spike/branching-platforms/: README.md  flatComponents.js  fpsCamera.js  graph.js  index.html  input.js  main.js  materials.js  polygonMesh.js  polygonUnion.js  segmentGeometry.js  topDownCamera.js
spike/cave-painting/: brush.js  densityField.js  fpsCamera.js  index.html  main.js  marchingCubes.js  noise3D.js
spike/cave-painting-rust/: README.md  index.html  main.js
spike/csg/: index.html  main.js
spike/csg-compat-test/: index.html  phase1-test.html
spike/csg-wasm-bench/: index.html  main.js  scenarios.js
spike/csg-wasm-bench/csg-wasm/: Cargo.toml
spike/csg-wasm-bench/csg-wasm/src/: lib.rs
spike/hub-walkway/: README.md  geometry.js  index.html  input.js  main.js  materials.js  model.js  topDownCamera.js
spike/level-viewer/: index.html
spike/shadow-lighting/: index.html
spike/vertex-color-nn/: .gitignore  evaluate.py  export_weights.py  extract_features.py  model.py  requirements.txt  train.py
src/: actions.js  camera.js  collision.js  connection.js  geometry.js  gizmo.js  hud.js  input.js  main.js  materials.js  platformGeometry.js  raycaster.js  scene.js  staircaseGeometry.js  state.js  volume.js
src/core/: BrushDef.js  Connection.js  Face.js  (+6 more)
(+79 files in other folders)
